--- a/templates/settings.html
+++ b/templates/settings.html
@@ -47,7 +47,7 @@
                         </tr>
                         <tr>
                             <td><strong>AI Model:</strong></td>
-                            <td>GPT-5 Mini</td>
+                            <td>{{ ai_model_name if ai_model_name else 'Not configured' }}</td>
                         </tr>
                         <tr>
                             <td><strong>Learning System:</strong></td>
