--- a/templates/base.html
+++ b/templates/base.html
@@ -97,6 +97,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script>if (typeof marked !== 'undefined') { marked.setOptions({ breaks: true, gfm: true }); }</script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
